--- a/Panthers Roster.ipynb
+++ b/Panthers Roster.ipynb
@@ -132,6 +132,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import argparse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def search_players():\n",
+    "    search = input(\"Search for a player: \").lower()\n",
+    "    cur.execute(\"SELECT * FROM roster WHERE name like %search%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
